# AgenticForge

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  start.sh
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routes/: auth.py  billing.py  deploy.py  forge.py  git.py  health.py  llm_test.py  projects.py  usage.py  users.py
backend/app/api/websockets/: agent_stream.py  connection_manager.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: database.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 1d04489656ce_initial_schema.py  26402debbbe4_add_google_id_to_users.py  2fee0b835458_add_user_id_to_project.py  4802af4bf6b4_add_thread_id_to_project.py  66588f377dae_initial_schema.py
backend/app/models/: __init__.py  project.py  usage.py  user.py
backend/app/schemas/: agent.py  auth.py  billing.py  deploy.py  git.py  project.py  streaming.py  users.py
backend/app/services/: email.py
backend/app/services/agents/: state.py  workflow.py
backend/app/services/agents/nodes/: coder.py  planner.py  reviewer.py
backend/app/services/llm/: factory.py
backend/tests/: conftest.py  test_phase6.py
backend/tests/api/: test_forge.py
frontend/: .env.production.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/assets/: index.css
frontend/src/config/: constants.js
(+44 files in other folders)
