[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "cryptography>=49.0.0",
    "fastapi>=0.137.1",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "httpx2>=2.4.0",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "psycopg[binary,pool]>=3.1.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pygithub>=2.9.1",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.51",
    "stripe>=11.5.0",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.49.0",
    "websockets>=15.0.1",
]
